allow quoting item names